[gd_scene load_steps=9 format=3 uid="uid://bv1nocfh3i556"]

[ext_resource type="Script" uid="uid://co15mhip5ijel" path="res://src/opening_editor.gd" id="1_1g675"]
[ext_resource type="PackedScene" uid="uid://d1s6qj7aofldk" path="res://scene/chessboard.tscn" id="2_0yhrm"]
[ext_resource type="PackedScene" uid="uid://b3ml34bssywkr" path="res://scene/cheshire.tscn" id="3_85lqa"]
[ext_resource type="Script" uid="uid://dg85frcnjlauy" path="res://src/interact.gd" id="4_2v8s7"]
[ext_resource type="FontFile" uid="uid://cmbwnmrpuigxx" path="res://assets/fonts/FangZhengShuSongJianTi-1.ttf" id="5_0yhrm"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_23ueg"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_31ryr"]
sky_material = SubResource("ProceduralSkyMaterial_23ueg")

[sub_resource type="Environment" id="Environment_htjak"]
background_mode = 2
sky = SubResource("Sky_31ryr")
tonemap_mode = 2

[node name="sandbox" type="Node3D"]
script = ExtResource("1_1g675")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_htjak")

[node name="chessboard" parent="." instance=ExtResource("2_0yhrm")]

[node name="camera_3d" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.425, 0.946, 0)

[node name="cheshire" parent="." instance=ExtResource("3_85lqa")]

[node name="interact" type="Area3D" parent="." node_paths=PackedStringArray("camera", "inspectable_item")]
script = ExtResource("4_2v8s7")
camera = NodePath("../camera_3d")
inspectable_item = [NodePath("../chessboard")]
metadata/_custom_type_script = "uid://dg85frcnjlauy"

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="panel" type="Panel" parent="canvas_layer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -362.0
grow_horizontal = 0
grow_vertical = 2

[node name="v_box_container" type="VBoxContainer" parent="canvas_layer/panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="margin_container_1" type="MarginContainer" parent="canvas_layer/panel/v_box_container"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="text_edit_name" type="TextEdit" parent="canvas_layer/panel/v_box_container/margin_container_1"]
layout_mode = 2

[node name="margin_container_2" type="MarginContainer" parent="canvas_layer/panel/v_box_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="text_edit_description" type="TextEdit" parent="canvas_layer/panel/v_box_container/margin_container_2"]
layout_mode = 2

[node name="margin_container_3" type="MarginContainer" parent="canvas_layer/panel/v_box_container"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="text_edit_move" type="TextEdit" parent="canvas_layer/panel/v_box_container/margin_container_3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="margin_container" type="MarginContainer" parent="canvas_layer/panel/v_box_container"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 21

[node name="h_box_container" type="HBoxContainer" parent="canvas_layer/panel/v_box_container/margin_container"]
layout_mode = 2

[node name="button_prev" type="Button" parent="canvas_layer/panel/v_box_container/margin_container/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_0yhrm")
text = "上一步"

[node name="button_save" type="Button" parent="canvas_layer/panel/v_box_container/margin_container/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_0yhrm")
text = "保存"

[node name="button_next" type="Button" parent="canvas_layer/panel/v_box_container/margin_container/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_0yhrm")
text = "下一步"
